--- a/templates/listings/checkout.html
+++ b/templates/listings/checkout.html
@@ -15,19 +15,13 @@
 
                     <div class="checkout-form-section mb-4">
                         <h5 class="mb-3">Shipping Information</h5>
+                        {{ form.full_name|as_crispy_field }}
+                        {{ form.shipping_address|as_crispy_field }}
                         <div class="row">
-                            <div class="col-md-6">{{ form.full_name|as_crispy_field }}</div>
-                            <div class="col-md-6">{{ form.email|as_crispy_field }}</div>
+                            <div class="col-md-6">{{ form.shipping_city|as_crispy_field }}</div>
+                            <div class="col-md-6">{{ form.shipping_postal_code|as_crispy_field }}</div>
                         </div>
-                        {{ form.street_address|as_crispy_field }}
-                        <div class="row">
-                            <div class="col-md-6">{{ form.city|as_crispy_field }}</div>
-                            <div class="col-md-6">{{ form.province|as_crispy_field }}</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">{{ form.postal_code|as_crispy_field }}</div>
-                            <div class="col-md-6">{{ form.country|as_crispy_field }}</div>
-                        </div>
+                        {{ form.gift_note|as_crispy_field }}
                     </div>
 
                     <div class="checkout-form-section mb-4">
