--- a/templates/messaging/inbox.html
+++ b/templates/messaging/inbox.html
@@ -8,7 +8,7 @@
             <a href="{{ conversation.get_absolute_url }}" class="list-group-item list-group-item-action d-flex align-items-center p-3" data-conversation-pk="{{ conversation.pk }}">
                 {% for participant in conversation.participants.all %}
                     {% if participant != request.user %}
-                        <img src="{{ participant.profile.avatar.url }}" alt="{{ participant.username }}'s avatar" class="rounded-circle me-3" width="50" height="50">
+                        <img src="{{ participant.profile.display_avatar_url }}" alt="{{ participant.username }}'s avatar" class="rounded-circle me-3" width="50" height="50">
                         <div class="d-flex flex-column me-auto">
                             <div class="d-flex justify-content-between w-100">
                                 <h5 class="mb-0 fw-bold">
