Navbar Issue Fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom sticky-top" style="z-index: 1030;">
   <div class="container">
     <a class="navbar-brand" href="{% url 'listings:listing_list' %}">CheckoutPH</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
