--- a/templates/listings/checkout.html
+++ b/templates/listings/checkout.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="col-lg-4">
-            <div class="order-summary-card sticky-top">
+            <div class="order-summary-card sticky-top" style="margin-top: 20px;">
                 <h5 class="mb-3">Order Summary</h5>
                 <ul class="list-unstyled">
                     {% for item in cart_items %}
