--- a/templates/listings/checkout.html
+++ b/templates/listings/checkout.html
@@ -30,7 +30,7 @@
                             <p class="text-muted small">We accept the following payment methods securely.</p>
                         </div>
                         <div class="form-check my-3">
-                            <input class="form-check-input" type="radio" name="paymentMethod" id="cod" checked>
+                            <input class="form-check-input" type="radio" name="payment_method" id="cod" value="COD" checked>
                             <label class="form-check-label" for="cod">
                                 Cash on Delivery (COD)
                             </label>
