--- a/templates/listings/receipt.html
+++ b/templates/listings/receipt.html
@@ -35,7 +35,7 @@
                     
                     <div class="d-flex justify-content-between mb-2">
                         <strong>Subtotal</strong>
-                        <span>₱{{ grand_total|philippine_currency }}</span>
+                        <span>₱{{ subtotal|philippine_currency }}</span>
                     </div>
                     <div class="d-flex justify-content-between mb-2">
                         <strong>Shipping Fee</strong>
