--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale-1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}CheckoutPH{% endblock %}</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -114,3 +114,14 @@
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         {% endfor %}
+    {% endif %}
+
+  {% block content %}{% endblock %}
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+{% block extra_js %}
+{% endblock %}
+
+</body>
+</html>
